--- a/src/privacy.html
+++ b/src/privacy.html
@@ -44,143 +44,166 @@
     <title>Glowdynastysaga</title>
   </head>
   <body>
-    <header>
-      <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-      <load src="./partials/mobile-menu.html" />
-      <load src="./partials/home.html" />
-    </header>
-
     <main>
-      <div class="container">
-        <h1 class="">Privacy Policy</h1>
-        <h6>Last Updated: 2025-05-16</h6>
-        <p>
-          This Privacy Policy applies to the glowdynastysaga.com website
-          (hereinafter referred to as "Website"). By accessing or using our
-          services, you agree to the collection and use of information as
-          described in this policy.
-        </p>
-        <ol>
-          <li>
-            Information We Collect
+      <section class="privacy-section">
+        <div class="container privecy-wrapper">
+          <div class="back-wrapper">
+            <a class="goback-btn" href="./index.html">
+              <svg class="goback-icon" width="16" height="16">
+                <use href="./img/sprite.svg#icon-fe_arrow-left"></use>
+              </svg>
+              Go To Home
+            </a>
+          </div>
+          <div class="content-wrapper">
+            <h1 class="privacy-title">Privacy Policy</h1>
+            <h6 class="updated">Last Updated: 2025-05-16</h6>
+            <p class="privacy-title-item hard-space">
+              This Privacy Policy applies to the glowdynastysaga.com website
+              (hereinafter referred to as "Website"). By accessing or using our
+              services, you agree to the collection and use of information as
+              described in this policy.
+            </p>
             <ul>
-              <p>The Website may collect the following types of data:</p>
-              <li>
-                Personal Information: Name, email address, and other details if
-                voluntarily provided. 
+              <li class="hard-space">
+                <h3 class="privacy-items-title">1.Information We Collect</h3>
+                <p class="privacy-items sliced hard-space">
+                  The Website may collect the following types of data:
+                </p>
+                <ul class="styled-items">
+                  <li class="privacy-items">
+                    Personal Information: Name, email address, and other details
+                    if voluntarily provided.
+                  </li>
+                  <li class="privacy-items">
+                    Technical Data: IP address, browser type, and device
+                    information for analytics purposes.
+                  </li>
+                  <li class="privacy-items">
+                    Cookies & Tracking: We use cookies to enhance user
+                    experience and track usage trends.
+                  </li>
+                </ul>
               </li>
-              <li>
-                Technical Data: IP address, browser type, and device information
-                for analytics purposes. 
+              <li class="hard-space">
+                <h3 class="privacy-items-title">
+                  2.How We Use Your Information
+                </h3>
+                <ul class="styled-items">
+                  <p class="privacy-items sliced">
+                    The data we collect may be used for:
+                  </p>
+                  <li class="privacy-items">
+                    Providing and improving our services.
+                  </li>
+                  <li class="privacy-items">
+                    Enhancing website security and preventing fraud.
+                  </li>
+                  <li class="privacy-items">
+                    Analyzing trends and user behavior through analytics tools.
+                  </li>
+                </ul>
               </li>
-              <li>
-                Cookies & Tracking: We use cookies to enhance user experience
-                and track usage trends. 
+              <li class="hard-space">
+                <h3 class="privacy-items-title">
+                  3.Cookies and Tracking Technologies
+                </h3>
+
+                <p class="privacy-items sliced hard-space">
+                  We use cookies and similar technologies to personalize
+                  content, track website performance, and improve user
+                  experience. Users can manage or disable cookies through
+                  browser settings.
+                </p>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">4.Third-Party Services</h3>
+                <ul class="styled-items">
+                  <p class="privacy-items sliced hard-space">
+                    We may use third-party services such as Google Analytics to
+                    monitor traffic and improve services. These services have
+                    their own privacy policies, which can be reviewed on their
+                    respective websites. Below are the links to the Privacy
+                    Policy of the third-party service providers used by the
+                    Application:
+                  </p>
+                  <li class="privacy-items">
+                    <a class="styled-link" href="">Google Play Services</a>
+                  </li>
+                  <li class="privacy-items">
+                    <a class="styled-link" href=""
+                      >Google Analytics for Firebase</a
+                    >
+                  </li>
+                  <li class="privacy-items">
+                    <a class="styled-link" href="">Facebook</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">5.Data Security</h3>
+
+                <p class="privacy-items sliced hard-space">
+                  We implement security measures to protect collected
+                  information from unauthorized access or misuse. However, no
+                  method of transmission over the internet is 100% secure.
+                </p>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">6.Children's Privacy</h3>
+
+                <p class="privacy-items sliced hard-space">
+                  Our Website is not intended for children under 13, and we do
+                  not knowingly collect personal data from them. If we become
+                  aware that a child has provided information, we will take
+                  steps to delete it.
+                </p>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">7.Changes to This Policy</h3>
+
+                <p class="privacy-items sliced hard-space">
+                  We may update this Privacy Policy periodically. Users will be
+                  notified of significant changes through the Website. Continued
+                  use of the Website after modifications implies acceptance of
+                  the updated policy.
+                </p>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">8.Your Rights</h3>
+                <ul class="styled-items">
+                  <p class="privacy-items sliced hard-space">
+                    Under applicable laws (e.g., GDPR, CCPA), you have rights
+                    to:
+                  </p>
+                  <li class="privacy-items">
+                    Access, update, or delete your personal data.
+                  </li>
+                  <li class="privacy-items">
+                    Withdraw consent for data collection.
+                  </li>
+                  <li class="privacy-items hard-space">
+                    Request a copy of the data we store about you.
+                  </li>
+                  <p class="privacy-items sliced hard-space">
+                    To exercise your rights, contact us via email.
+                  </p>
+                </ul>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">9.Contact Us</h3>
+                <ul>
+                  <p class="privacy-items sliced hard-space">
+                    If you have any questions or concerns about this Privacy
+                    Policy, please contact us at
+                    <a class="styled-link">info@glowdynastysaga.com</a>.
+                  </p>
+                </ul>
               </li>
             </ul>
-          </li>
-          <li>
-            How We Use Your Information
-            <ul>
-              <p>The data we collect may be used for:</p>
-              <li>Providing and improving our services.</li>
-              <li>Enhancing website security and preventing fraud.</li>
-              <li>
-                Analyzing trends and user behavior through analytics tools.
-              </li>
-            </ul>
-          </li>
-          <li>
-            Cookies and Tracking Technologies
-            <ul>
-              <p>
-                We use cookies and similar technologies to personalize content,
-                track website performance, and improve user experience. Users
-                can manage or disable cookies through browser settings. 
-              </p>
-            </ul>
-          </li>
-          <li>
-            Third-Party Services
-            <ul>
-              <p>
-                We may use third-party services such as Google Analytics to
-                monitor traffic and improve services. These services have their
-                own privacy policies, which can be reviewed on their respective
-                websites. Below are the links to the Privacy Policy of the
-                third-party service providers used by the Application:
-              </p>
-              <li>Google Play Services</li>
-              <li>Google Analytics for Firebase</li>
-              <li>Facebook</li>
-            </ul>
-          </li>
-          <li>
-            Data Security
-            <ul>
-              <p>
-                We implement security measures to protect collected information
-                from unauthorized access or misuse. However, no method of
-                transmission over the internet is 100% secure.
-              </p>
-            </ul>
-          </li>
-          <li>
-            Children’s Privacy
-            <ul>
-              <p>
-                Our Website is not intended for children under 13, and we do not
-                knowingly collect personal data from them. If we become aware
-                that a child has provided information, we will take steps to
-                delete it.
-              </p>
-            </ul>
-          </li>
-          <li>
-            Changes to This Policy
-            <ul>
-              <p>
-                We may update this Privacy Policy periodically. Users will be
-                notified of significant changes through the Website. Continued
-                use of the Website after modifications implies acceptance of the
-                updated policy.
-              </p>
-            </ul>
-          </li>
-          <li>
-            Your Rights
-            <ul>
-              <p>
-                Under applicable laws (e.g., GDPR, CCPA), you have rights to:
-              </p>
-              <li>Access, update, or delete your personal data.</li>
-              <li>Withdraw consent for data collection.</li>
-              <li>Request a copy of the data we store about you.</li>
-              <p>To exercise your rights, contact us via email.</p>
-            </ul>
-          </li>
-          <li>
-            Contact Us
-            <ul>
-              <p>
-                If you have any questions or concerns about this Privacy Policy,
-                please contact us at info@glowdynastysaga.com.
-              </p>
-            </ul>
-          </li>
-        </ol>
-      </div>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/home.html" />
-      <load src="./partials/about.html" />
-      <load src="./partials/how-to-play.html" />
-      <load src="./partials/features.html" />
-      <load src="./partials/characters.html" />
-      <load src="./partials/atmosphere.html" />
-      <load src="./partials/reviews.html" />
-      <load src="./partials/faq.html" />
-      <load src="./partials/call-to-action.html" />
-      <load src="./partials/cookies-modal.html" />
+          </div>
+        </div>
+      </section>
     </main>
 
     <load src="./partials/footer.html" />
