--- a/src/terms.html
+++ b/src/terms.html
@@ -1,1 +1,207 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
+    <meta
+      name="description"
+      content="Dynasty: Fallen & Rise – Rebuild your fallen kingdom in this epic strategy RPG. Recruit heroes, lead armies, and reclaim your legacy!"
+    />
+    <meta
+      name="keywords"
+      content="Dynasty RPG, strategy game, medieval fantasy, kingdom war, mobile empire game, historical combat, PvP battle, build empire"
+    />
+    <meta name="author" content="Glow Dynasty Saga Studios" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://glowdynastysaga.com" />
+    <meta
+      property="og:title"
+      content="Dynasty: Fallen & Rise – Reclaim the Throne in a War-Torn World!"
+    />
+    <meta
+      property="og:description"
+      content="Command armies, outwit rivals, and build your legend in this immersive tactical RPG."
+    />
+    <meta
+      property="og:image"
+      content="https://glowdynastysaga.com/og-image.jpg"
+    />
+    <meta property="og:url" content="https://glowdynastysaga.com" />
+    <meta property="og:type" content="website" />
 
+    <title>Glowdynastysaga</title>
+  </head>
+  <body>
+    <main>
+      <section class="privacy-section">
+        <div class="container privecy-wrapper">
+          <div class="back-wrapper">
+            <a class="goback-btn" href="./index.html">
+              <svg class="goback-icon" width="16" height="16">
+                <use href="./img/sprite.svg#icon-fe_arrow-left"></use>
+              </svg>
+              Go To Home
+            </a>
+          </div>
+          <div class="content-wrapper">
+            <h1 class="privacy-title">Terms and Conditions</h1>
+            <h6 class="updated">Last Updated: 2025-05-16</h6>
+            <p class="privacy-title-item soft-space">
+              These Terms and Conditions apply to the glowdynastysaga.com
+              website (hereinafter referred to as "Website"). By accessing or
+              using our services, you agree to comply with and be bound by these
+              Terms and Conditions.
+            </p>
+            <p class="privacy-title-item hard-space">
+              Please review them carefully before using our Website.
+            </p>
+            <ul>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">Acceptance of Terms</h3>
+
+                <p class="privacy-items">
+                  By accessing or using our Website, you acknowledge that you
+                  have read, understood, and agree to be bound by these Terms
+                  and Conditions. If you do not agree, please do not use the
+                  Website.
+                </p>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">Intellectual Property</h3>
+                <ul>
+                  <p class="privacy-items">
+                    All content, including text, images, graphics, and
+                    trademarks, belongs to this website or its licensors and is
+                    protected by applicable copyright and trademark laws.
+                    Unauthorized reproduction, modification, or distribution is
+                    prohibited.
+                  </p>
+                  <p class="privacy-items">
+                    Any unauthorized commercial use, resale, or redistribution
+                    of the Website's content, including but not limited to its
+                    design, layout, or code, is strictly prohibited.
+                  </p>
+                </ul>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">User Obligations</h3>
+                <ul class="styled-items">
+                  <li class="privacy-items">
+                    You agree not to use the Website for any unlawful purposes.
+                  </li>
+                  <li class="privacy-items">
+                    You must not attempt to interfere with the proper working of
+                    the Website.
+                  </li>
+                  <li class="privacy-items">
+                    Any attempt to reverse-engineer, decompile, or extract the
+                    source code is strictly prohibited.
+                  </li>
+                  <p class="privacy-items sliced">
+                    You may not use automated systems, bots, or scripts to
+                    access or interact with the Website in any way that violates
+                    Google's policies on spam and automated queries.
+                  </p>
+                </ul>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">
+                  Third-Party Services and External Links
+                </h3>
+                <ul class="styled-items">
+                  <p class="privacy-items sliced hard-space">
+                    Please note that the Application utilizes third-party
+                    services that have their own Terms and Conditions. Below are
+                    the links to the Terms and Conditions of the third-party
+                    service providers used by the Application:
+                  </p>
+                  <li class="privacy-items">
+                    <a class="styled-link" href="">Google Play Services</a>
+                  </li>
+                  <li class="privacy-items">
+                    <a class="styled-link" href=""
+                      >Google Analytics for Firebase</a
+                    >
+                  </li>
+                  <li class="privacy-items hard-space">
+                    <a class="styled-link" href="">Facebook</a>
+                  </li>
+                  <p class="privacy-items sliced">
+                    By clicking on third-party links, you acknowledge that these
+                    services operate under their own terms and policies. We are
+                    not responsible for any data collection, practices, or
+                    content on these external sites.
+                  </p>
+                </ul>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">Limitation of Liability</h3>
+
+                <p class="privacy-items">
+                  We are not responsible for any direct, indirect, incidental,
+                  or consequential damages arising from the use of our Website.
+                  We do not guarantee uninterrupted or error-free operation of
+                  the Website. We are not liable for any loss of data, business
+                  interruptions, or security breaches that may occur.
+                </p>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">Privacy and Data Usage</h3>
+
+                <p class="privacy-items">
+                  The Website may collect and process personal data as described
+                  in our
+                  <a class="styled-link" href="./privacy.html">Privacy Policy</a
+                  >.
+                </p>
+                <p class="privacy-items">
+                  We do not sell or rent your personal data to third parties. We
+                  only share data with partners for analytics, security, and
+                  functionality improvements.
+                </p>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">Changes to Terms</h3>
+
+                <p class="privacy-items">
+                  We reserve the right to modify these Terms at any time.
+                  Continued use of the Website after changes signifies
+                  acceptance of the updated Terms.
+                </p>
+                <p class="privacy-items">
+                  Users will be notified of material changes to these terms via
+                  an update on the Website or through email (if provided).
+                </p>
+              </li>
+              <li class="hard-space">
+                <h3 class="privacy-items-title">Contact Us</h3>
+
+                <p class="privacy-items">
+                  If you have any questions or suggestions about the Terms and
+                  Conditions, please do not hesitate to contact us at
+                  <a class="styled-link">info@glowdynastysaga.com</a>.
+                </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <load src="./partials/footer.html" />
+
+    <script type="module" src="./main.js"></script>
+  </body>
+</html>
