once more added privacy pages

--- a/src/cookies.html
+++ b/src/cookies.html
@@ -175,24 +175,18 @@
                 <p class="privacy-items">
                   If you have any questions about this Cookies Policy, you can
                   contact us at
-                  <a class="styled-link" href="">info@glowdynastysaga.com</a>.
+                  <a
+                    class="styled-link"
+                    href="info@glowdynastysaga.com"
+                    type="email"
+                    >info@glowdynastysaga.com</a
+                  >.
                 </p>
               </li>
             </ul>
           </div>
         </div>
       </section>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/home.html" />
-      <load src="./partials/about.html" />
-      <load src="./partials/how-to-play.html" />
-      <load src="./partials/features.html" />
-      <load src="./partials/characters.html" />
-      <load src="./partials/atmosphere.html" />
-      <load src="./partials/reviews.html" />
-      <load src="./partials/faq.html" />
-      <load src="./partials/call-to-action.html" />
-      <load src="./partials/cookies-modal.html" />
     </main>
 
     <load src="./partials/footer.html" />
