--- a/src/privacy.html
+++ b/src/privacy.html
@@ -196,7 +196,9 @@
                   <p class="privacy-items sliced hard-space">
                     If you have any questions or concerns about this Privacy
                     Policy, please contact us at
-                    <a class="styled-link">info@glowdynastysaga.com</a>.
+                    <a class="styled-link" href="" type="email"
+                      >info@glowdynastysaga.com</a
+                    >.
                   </p>
                 </ul>
               </li>
