--- a/src/terms.html
+++ b/src/terms.html
@@ -191,7 +191,9 @@
                 <p class="privacy-items">
                   If you have any questions or suggestions about the Terms and
                   Conditions, please do not hesitate to contact us at
-                  <a class="styled-link">info@glowdynastysaga.com</a>.
+                  <a class="styled-link" href="" type="email"
+                    >info@glowdynastysaga.com</a
+                  >.
                 </p>
               </li>
             </ul>
