added characters section, links to services at cookies, privacy and terms pages

--- a/src/privacy.html
+++ b/src/privacy.html
@@ -128,15 +128,25 @@
                     Application:
                   </p>
                   <li class="privacy-items">
-                    <a class="styled-link" href="">Google Play Services</a>
+                    <a
+                      class="styled-link"
+                      href="https://play.google.com/intl/en_en/about/play-terms/"
+                      >Google Play Services</a
+                    >
                   </li>
                   <li class="privacy-items">
-                    <a class="styled-link" href=""
+                    <a
+                      class="styled-link"
+                      href="https://firebase.google.com/support/privacy"
                       >Google Analytics for Firebase</a
                     >
                   </li>
                   <li class="privacy-items">
-                    <a class="styled-link" href="">Facebook</a>
+                    <a
+                      class="styled-link"
+                      href="https://www.facebook.com/privacy/policy/"
+                      >Facebook</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -196,7 +206,9 @@
                   <p class="privacy-items sliced hard-space">
                     If you have any questions or concerns about this Privacy
                     Policy, please contact us at
-                    <a class="styled-link" href="" type="email"
+                    <a
+                      class="styled-link"
+                      href="mailto:info@glowdynastysaga.com"
                       >info@glowdynastysaga.com</a
                     >.
                   </p>
