--- a/src/cookies.html
+++ b/src/cookies.html
@@ -136,18 +136,33 @@
                     website may not function properly.
                   </p>
                   <li class="privacy-items">
-                    <a class="styled-link" href="">Manage cookies in Chrome</a>
+                    <a
+                      class="styled-link"
+                      href="https://support.google.com/chrome/answer/95647?hl=en&co=GENIE.Platform%3DDesktop"
+                      >Manage cookies in Chrome</a
+                    >
                   </li>
                   <li class="privacy-items">
-                    <a class="styled-link" href="">Manage cookies in Firefox</a>
+                    <a
+                      class="styled-link"
+                      href="https://support.mozilla.org/en-US/kb/clear-cookies-and-site-data-firefox"
+                      >Manage cookies in Firefox</a
+                    >
                   </li>
                   <li class="privacy-items">
-                    <a class="styled-link" href="">
+                    <a
+                      class="styled-link"
+                      href="https://support.microsoft.com/en-us/topic/how-to-delete-cookie-files-in-internet-explorer-bca9446f-d873-78de-77ba-d42645fa52fc"
+                    >
                       Manage cookies in Internet Explorer</a
                     >
                   </li>
                   <li class="privacy-items">
-                    <a class="styled-link" href="">Manage cookies in Safari</a>
+                    <a
+                      class="styled-link"
+                      href="https://help.apple.com/safari/mac/8.0/en.lproj/sfri11471.html"
+                      >Manage cookies in Safari</a
+                    >
                   </li>
                 </ul>
               </li>
@@ -175,10 +190,7 @@
                 <p class="privacy-items">
                   If you have any questions about this Cookies Policy, you can
                   contact us at
-                  <a
-                    class="styled-link"
-                    href="info@glowdynastysaga.com"
-                    type="email"
+                  <a class="styled-link" href="mailto:info@glowdynastysaga.com"
                     >info@glowdynastysaga.com</a
                   >.
                 </p>
