--- a/src/terms.html
+++ b/src/terms.html
@@ -128,15 +128,25 @@
                     service providers used by the Application:
                   </p>
                   <li class="privacy-items">
-                    <a class="styled-link" href="">Google Play Services</a>
+                    <a
+                      class="styled-link"
+                      href="https://play.google.com/about/play-terms/index.html"
+                      >Google Play Services</a
+                    >
                   </li>
                   <li class="privacy-items">
-                    <a class="styled-link" href=""
+                    <a
+                      class="styled-link"
+                      href="https://firebase.google.com/terms/analytics"
                       >Google Analytics for Firebase</a
                     >
                   </li>
                   <li class="privacy-items hard-space">
-                    <a class="styled-link" href="">Facebook</a>
+                    <a
+                      class="styled-link"
+                      href="https://www.facebook.com/legal/terms_conditions?_rdr"
+                      >Facebook</a
+                    >
                   </li>
                   <p class="privacy-items sliced">
                     By clicking on third-party links, you acknowledge that these
@@ -191,7 +201,7 @@
                 <p class="privacy-items">
                   If you have any questions or suggestions about the Terms and
                   Conditions, please do not hesitate to contact us at
-                  <a class="styled-link" href="" type="email"
+                  <a class="styled-link" href="mailto:info@glowdynastysaga.com"
                     >info@glowdynastysaga.com</a
                   >.
                 </p>
